--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.ListviewAssignment"
         tools:targetApi="31">
         <activity
+            android:name=".ImageListViewDialog"
+            android:exported="false" />
+        <activity
+            android:name=".GridViewDialog"
+            android:exported="false" />
+        <activity
             android:name=".ListViewDialog"
             android:exported="false" />
         <activity
